# WildberriesTest

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: lib.rs  main.rs  models.rs  postgres_client.rs  server.rs
