[package]
name = "wildberries_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.3.1"
actix-service = "2.0.2"
actix-web = "4.3.1"
dotenv = "0.15.0"
futures = "0.3.28"
log = "0.4.20"
serde = { version = "1.0.185", features = ["derive"] }
serial_test = "2.0.0"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio"] }
tokio = "1.32.0"
simplelog = "0.6"

